# documind-ai

./: .env.example  .gitignore  README.md  create_test_pdf.py  main.py  pyproject.toml  test_connections.py  test_embedder.py  test_generator.py  test_hybrid_search.py  test_parser.py  test_reranker.py  test_weaviate_store.py
api/: ingest.py  query.py
evals/: golden_dataset.py  ragas_eval.ipynb
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AnswerCard.jsx  ChatInterface.jsx  ThinkingState.jsx  UploadZone.jsx
generation/: claude_generator.py
ingestion/: embedder.py  parser.py  s3_handler.py  test_s3_handler.py  weaviate_store.py
observability/: cost_calculator.py  langfuse_setup.py  middleware.py  tracer.py
retrieval/: hybrid_search.py  reranker.py
