[project]
name = "documind-ai"
version = "0.1.0"
description = "DocuMind AI - Multi-modal RAG with hybrid retrieval, reranking and observability"
requires-python = ">=3.11"
dependencies = [
    # API framework
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",

    # LLM
    "anthropic>=0.40.0",

    # Document parsing
    "unstructured[pdf]>=0.16.0",

    # Embeddings
    "sentence-transformers>=3.3.0",

    # Vector store — latest version, no exact pin
    "weaviate-client>=4.21.0",

    # AWS S3
    "boto3>=1.35.0",

    # Hybrid retrieval
    "rank-bm25>=0.2.2",

    # Reranker — latest version
    "FlagEmbedding>=1.4.0",

    # Observability
    "langfuse>=3.0.0",
    "opentelemetry-instrumentation-anthropic>=0.36.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "observability",
    "ingestion",
    "retrieval",
    "generation",
    "api",
]